// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropzone withStyles should render correctly 1`] = `
<WithStyles(WithId)
  acceptedFiles={Array []}
  fileList={
    Array [
      Object {
        "name": "Screenshot 2019-12-05 at 17.15.43.png",
        "size": 141,
        "type": "image/png",
      },
      Object {
        "name": "Screenshot 2019-12-05 at 12.03.13.png",
        "size": 875,
        "type": "image/png",
      },
    ]
  }
  id="dropzone1"
  labels={
    Object {
      "acceptedFiles": "Accepted files:",
      "drag": "Drag and drop or",
      "dropFiles": "Drop files here",
      "dropzone": "Label",
      "fileSizeError": "The file exceeds the maximum upload size",
      "fileTypeError": "File type not allowed for upload",
      "progressConjunction": "of",
      "removeFileButtonLabel": "Remove File",
      "selectFiles": "Select files",
      "sizeWarning": "Max. file size:",
    }
  }
  maxFileSize={1}
  onDragEnter={[MockFunction]}
  onDragLeave={[MockFunction]}
  onDropCapture={[MockFunction]}
  onFileRemoved={[MockFunction]}
  onFilesAdded={[MockFunction]}
>
  <WithId
    acceptedFiles={Array []}
    classes={
      Object {
        "dragAction": "HvFileUploaderDropZone-dragAction",
        "dragText": "HvFileUploaderDropZone-dragText",
        "dropArea": "HvFileUploaderDropZone-dropArea",
        "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
        "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
        "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
        "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
        "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel",
        "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
        "inputArea": "HvFileUploaderDropZone-inputArea",
        "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
      }
    }
    fileList={
      Array [
        Object {
          "name": "Screenshot 2019-12-05 at 17.15.43.png",
          "size": 141,
          "type": "image/png",
        },
        Object {
          "name": "Screenshot 2019-12-05 at 12.03.13.png",
          "size": 875,
          "type": "image/png",
        },
      ]
    }
    id="dropzone1"
    labels={
      Object {
        "acceptedFiles": "Accepted files:",
        "drag": "Drag and drop or",
        "dropFiles": "Drop files here",
        "dropzone": "Label",
        "fileSizeError": "The file exceeds the maximum upload size",
        "fileTypeError": "File type not allowed for upload",
        "progressConjunction": "of",
        "removeFileButtonLabel": "Remove File",
        "selectFiles": "Select files",
        "sizeWarning": "Max. file size:",
      }
    }
    maxFileSize={1}
    onDragEnter={[MockFunction]}
    onDragLeave={[MockFunction]}
    onDropCapture={[MockFunction]}
    onFileRemoved={[MockFunction]}
    onFilesAdded={[MockFunction]}
  >
    <DropZone
      acceptedFiles={Array []}
      classes={
        Object {
          "dragAction": "HvFileUploaderDropZone-dragAction",
          "dragText": "HvFileUploaderDropZone-dragText",
          "dropArea": "HvFileUploaderDropZone-dropArea",
          "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
          "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
          "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
          "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
          "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel",
          "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
          "inputArea": "HvFileUploaderDropZone-inputArea",
          "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
        }
      }
      fileList={
        Array [
          Object {
            "name": "Screenshot 2019-12-05 at 17.15.43.png",
            "size": 141,
            "type": "image/png",
          },
          Object {
            "name": "Screenshot 2019-12-05 at 12.03.13.png",
            "size": 875,
            "type": "image/png",
          },
        ]
      }
      id="dropzone1"
      labels={
        Object {
          "acceptedFiles": "Accepted files:",
          "drag": "Drag and drop or",
          "dropFiles": "Drop files here",
          "dropzone": "Label",
          "fileSizeError": "The file exceeds the maximum upload size",
          "fileTypeError": "File type not allowed for upload",
          "progressConjunction": "of",
          "removeFileButtonLabel": "Remove File",
          "selectFiles": "Select files",
          "sizeWarning": "Max. file size:",
        }
      }
      maxFileSize={1}
      onDragEnter={[MockFunction]}
      onDragLeave={[MockFunction]}
      onDropCapture={[MockFunction]}
      onFileRemoved={[MockFunction]}
      onFilesAdded={[MockFunction]}
    >
      <div
        aria-label="File Dropzone"
        className="HvFileUploaderDropZone-dropZoneLabelsGroup"
        id="dropzone1"
      >
        <WithStyles(HvLabel)
          className="HvFileUploaderDropZone-dropZoneLabel"
          htmlFor="dropzone1-input-file"
          id="dropzone1-input-file-label"
          label="Label"
        >
          <HvLabel
            className="HvFileUploaderDropZone-dropZoneLabel"
            classes={
              Object {
                "childGutter": "HvLabel-childGutter",
                "labelDisabled": "HvLabel-labelDisabled",
                "root": "HvLabel-root",
              }
            }
            htmlFor="dropzone1-input-file"
            id="dropzone1-input-file-label"
            label="Label"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root"
              component="label"
              htmlFor="dropzone1-input-file"
              id="dropzone1-input-file-label"
              variant="highlightText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                htmlFor="dropzone1-input-file"
                id="dropzone1-input-file-label"
                variant="highlightText"
              >
                <label
                  className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root HvTypography-root HvTypography-highlightText"
                  htmlFor="dropzone1-input-file"
                  id="dropzone1-input-file-label"
                >
                  Label
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvLabel>
        </WithStyles(HvLabel)>
        <WithStyles(HvInfoMessage)
          id="dropzone1-description"
        >
          <HvInfoMessage
            classes={
              Object {
                "gutter": "HvInfoMessage-gutter",
                "infoDisabled": "HvInfoMessage-infoDisabled",
                "root": "HvInfoMessage-root",
              }
            }
            id="dropzone1-description"
          >
            <WithStyles(ForwardRef)
              className="HvInfoMessage-root HvInfoMessage-gutter"
              component="label"
              id="dropzone1-description"
              variant="normalText"
            >
              <ForwardRef
                className="HvInfoMessage-root HvInfoMessage-gutter"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                id="dropzone1-description"
                variant="normalText"
              >
                <label
                  className="HvInfoMessage-root HvInfoMessage-gutter HvTypography-root HvTypography-normalText"
                  id="dropzone1-description"
                >
                  Max. file size: 1.00B
                  Accepted files:
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvInfoMessage>
        </WithStyles(HvInfoMessage)>
      </div>
      <div
        className="HvFileUploaderDropZone-dropZoneContainer"
        id="dropzone1-button"
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onDropCapture={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <input
          accept=""
          className="HvFileUploaderDropZone-inputArea"
          disabled={false}
          id="dropzone1-input-file"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          title="Drag and drop or Select files"
          type="file"
        />
        <div
          className="HvFileUploaderDropZone-dropArea"
        >
          <Doc
            className="HvFileUploaderDropZone-dropZoneAreaIcon"
            color="acce1"
            iconSize="M"
          >
            <HvIconBase
              className="HvFileUploaderDropZone-dropZoneAreaIcon"
              iconSize="M"
              name="Doc"
            >
              <div
                className="HvFileUploaderDropZone-dropZoneAreaIcon HvIconBase-root HvIconBase-m"
                name="Doc"
              >
                <svg
                  focusable={false}
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="color0"
                    d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </HvIconBase>
          </Doc>
          <div
            className="HvFileUploaderDropZone-dropZoneAreaLabels"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dragText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dragText"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
              >
                <p
                  className="HvFileUploaderDropZone-dragText HvTypography-root HvTypography-normalText"
                >
                  Drag and drop or
                  <span
                    className="HvFileUploaderDropZone-selectFilesText"
                  >
                     Select files
                  </span>
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
        </div>
      </div>
    </DropZone>
  </WithId>
</WithStyles(WithId)>
`;

exports[`Dropzone withStyles should render correctly when disabled 1`] = `
<WithStyles(WithId)
  acceptedFiles={Array []}
  disabled={true}
  fileList={
    Array [
      Object {
        "name": "Screenshot 2019-12-05 at 17.15.43.png",
        "size": 141,
        "type": "image/png",
      },
      Object {
        "name": "Screenshot 2019-12-05 at 12.03.13.png",
        "size": 875,
        "type": "image/png",
      },
    ]
  }
  id="dropzone1"
  labels={
    Object {
      "acceptedFiles": "Accepted files:",
      "drag": "Drag and drop or",
      "dropFiles": "Drop files here",
      "dropzone": "Label",
      "fileSizeError": "The file exceeds the maximum upload size",
      "fileTypeError": "File type not allowed for upload",
      "progressConjunction": "of",
      "removeFileButtonLabel": "Remove File",
      "selectFiles": "Select files",
      "sizeWarning": "Max. file size:",
    }
  }
  maxFileSize={1}
  multiple={false}
  onDragEnter={[MockFunction]}
  onDragLeave={[MockFunction]}
  onDropCapture={[MockFunction]}
  onFileRemoved={[MockFunction]}
  onFilesAdded={[MockFunction]}
>
  <WithId
    acceptedFiles={Array []}
    classes={
      Object {
        "dragAction": "HvFileUploaderDropZone-dragAction",
        "dragText": "HvFileUploaderDropZone-dragText",
        "dropArea": "HvFileUploaderDropZone-dropArea",
        "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
        "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
        "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
        "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
        "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel",
        "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
        "inputArea": "HvFileUploaderDropZone-inputArea",
        "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
      }
    }
    disabled={true}
    fileList={
      Array [
        Object {
          "name": "Screenshot 2019-12-05 at 17.15.43.png",
          "size": 141,
          "type": "image/png",
        },
        Object {
          "name": "Screenshot 2019-12-05 at 12.03.13.png",
          "size": 875,
          "type": "image/png",
        },
      ]
    }
    id="dropzone1"
    labels={
      Object {
        "acceptedFiles": "Accepted files:",
        "drag": "Drag and drop or",
        "dropFiles": "Drop files here",
        "dropzone": "Label",
        "fileSizeError": "The file exceeds the maximum upload size",
        "fileTypeError": "File type not allowed for upload",
        "progressConjunction": "of",
        "removeFileButtonLabel": "Remove File",
        "selectFiles": "Select files",
        "sizeWarning": "Max. file size:",
      }
    }
    maxFileSize={1}
    multiple={false}
    onDragEnter={[MockFunction]}
    onDragLeave={[MockFunction]}
    onDropCapture={[MockFunction]}
    onFileRemoved={[MockFunction]}
    onFilesAdded={[MockFunction]}
  >
    <DropZone
      acceptedFiles={Array []}
      classes={
        Object {
          "dragAction": "HvFileUploaderDropZone-dragAction",
          "dragText": "HvFileUploaderDropZone-dragText",
          "dropArea": "HvFileUploaderDropZone-dropArea",
          "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
          "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
          "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
          "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
          "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel",
          "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
          "inputArea": "HvFileUploaderDropZone-inputArea",
          "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
        }
      }
      disabled={true}
      fileList={
        Array [
          Object {
            "name": "Screenshot 2019-12-05 at 17.15.43.png",
            "size": 141,
            "type": "image/png",
          },
          Object {
            "name": "Screenshot 2019-12-05 at 12.03.13.png",
            "size": 875,
            "type": "image/png",
          },
        ]
      }
      id="dropzone1"
      labels={
        Object {
          "acceptedFiles": "Accepted files:",
          "drag": "Drag and drop or",
          "dropFiles": "Drop files here",
          "dropzone": "Label",
          "fileSizeError": "The file exceeds the maximum upload size",
          "fileTypeError": "File type not allowed for upload",
          "progressConjunction": "of",
          "removeFileButtonLabel": "Remove File",
          "selectFiles": "Select files",
          "sizeWarning": "Max. file size:",
        }
      }
      maxFileSize={1}
      multiple={false}
      onDragEnter={[MockFunction]}
      onDragLeave={[MockFunction]}
      onDropCapture={[MockFunction]}
      onFileRemoved={[MockFunction]}
      onFilesAdded={[MockFunction]}
    >
      <div
        aria-label="File Dropzone"
        className="HvFileUploaderDropZone-dropZoneLabelsGroup"
        id="dropzone1"
      >
        <WithStyles(HvLabel)
          className="HvFileUploaderDropZone-dropZoneLabel"
          htmlFor="dropzone1-input-file"
          id="dropzone1-input-file-label"
          label="Label"
        >
          <HvLabel
            className="HvFileUploaderDropZone-dropZoneLabel"
            classes={
              Object {
                "childGutter": "HvLabel-childGutter",
                "labelDisabled": "HvLabel-labelDisabled",
                "root": "HvLabel-root",
              }
            }
            htmlFor="dropzone1-input-file"
            id="dropzone1-input-file-label"
            label="Label"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root"
              component="label"
              htmlFor="dropzone1-input-file"
              id="dropzone1-input-file-label"
              variant="highlightText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                htmlFor="dropzone1-input-file"
                id="dropzone1-input-file-label"
                variant="highlightText"
              >
                <label
                  className="HvFileUploaderDropZone-dropZoneLabel HvLabel-root HvTypography-root HvTypography-highlightText"
                  htmlFor="dropzone1-input-file"
                  id="dropzone1-input-file-label"
                >
                  Label
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvLabel>
        </WithStyles(HvLabel)>
        <WithStyles(HvInfoMessage)
          id="dropzone1-description"
        >
          <HvInfoMessage
            classes={
              Object {
                "gutter": "HvInfoMessage-gutter",
                "infoDisabled": "HvInfoMessage-infoDisabled",
                "root": "HvInfoMessage-root",
              }
            }
            id="dropzone1-description"
          >
            <WithStyles(ForwardRef)
              className="HvInfoMessage-root HvInfoMessage-gutter"
              component="label"
              id="dropzone1-description"
              variant="normalText"
            >
              <ForwardRef
                className="HvInfoMessage-root HvInfoMessage-gutter"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                id="dropzone1-description"
                variant="normalText"
              >
                <label
                  className="HvInfoMessage-root HvInfoMessage-gutter HvTypography-root HvTypography-normalText"
                  id="dropzone1-description"
                >
                  Max. file size: 1.00B
                  Accepted files:
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvInfoMessage>
        </WithStyles(HvInfoMessage)>
      </div>
      <div
        className="HvFileUploaderDropZone-dropZoneContainer HvFileUploaderDropZone-dropZoneContainerDisabled"
        id="dropzone1-button"
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onDropCapture={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <input
          accept=""
          className="HvFileUploaderDropZone-inputArea"
          disabled={true}
          id="dropzone1-input-file"
          multiple={false}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          title=""
          type="file"
        />
        <div
          className="HvFileUploaderDropZone-dropArea"
        >
          <Doc
            className="HvFileUploaderDropZone-dropZoneAreaIcon"
            color="atmo4"
            iconSize="M"
          >
            <HvIconBase
              className="HvFileUploaderDropZone-dropZoneAreaIcon"
              iconSize="M"
              name="Doc"
            >
              <div
                className="HvFileUploaderDropZone-dropZoneAreaIcon HvIconBase-root HvIconBase-m"
                name="Doc"
              >
                <svg
                  focusable={false}
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="color0"
                    d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                    fill="#CCCED0"
                  />
                </svg>
              </div>
            </HvIconBase>
          </Doc>
          <div
            className="HvFileUploaderDropZone-dropZoneAreaLabels"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dragText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dragText"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "disabledText": "HvTypography-disabledText",
                    "highlightText": "HvTypography-highlightText",
                    "lTitle": "HvTypography-lTitle",
                    "link": "HvTypography-link",
                    "mTitle": "HvTypography-mTitle",
                    "noWrap": "HvTypography-noWrap",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "root": "HvTypography-root",
                    "sTitle": "HvTypography-sTitle",
                    "sectionTitle": "HvTypography-sectionTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "vizText": "HvTypography-vizText",
                    "vizTextDisabled": "HvTypography-vizTextDisabled",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsInlineLink": "HvTypography-xsInlineLink",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
              >
                <p
                  className="HvFileUploaderDropZone-dragText HvTypography-root HvTypography-normalText"
                >
                  Drag and drop or
                  <span
                    className="HvFileUploaderDropZone-selectFilesText"
                  >
                     Select files
                  </span>
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
        </div>
      </div>
    </DropZone>
  </WithId>
</WithStyles(WithId)>
`;
